--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pipeline BoardGames",
+  "name": "As melhores promoções em Boardgames na Pipeline!",
   "icons": [
     {
       "src": "favicon.ico",
